--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    width: 100%;
+    height: 100vh; 
 }
 
 .bg {
